# FP-A-app

./: .env.local.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
ml-service/: .dockerignore  Dockerfile  README.md  app.py  forecast.py  pyproject.toml  test_api.py
src/: AuthGate.jsx  CashflowDataModal.jsx  CompanyContext.jsx  CompanyForm.jsx  CompanyGate.jsx  CompanySettingsModal.jsx  DemoBanner.jsx  LedgerImportSection.jsx  i18n.js  main.jsx  phanmem-dongtien_4.jsx
src/lib/: accounts.js  cashflow.js  company.js  db.js  demo.js  forecastApi.js  ledgerImport.js  money.js  rates.js  regionDefaults.js  supabase.js  transactions.js
src/locales/: en.json  vi.json
supabase/: schema.sql
supabase/migrations/: 001_dual_accounting_standard.sql  002_cash_transactions.sql
