[project]
name = "luxora-cashflow-forecast"
version = "0.1.0"
description = "Dịch vụ dự báo dòng tiền (XGBoost) cho app Luxora — đọc transactions từ Supabase"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
]

[tool.uv]
package = false
